...
        <item quantity="one"><xliff:g>%d</xliff:g> card</item>
        <item quantity="other"><xliff:g>%d</xliff:g> cards</item>
    </plurals>
    <string name="group_name_already_in_use">Group name already in use</string>
    <string name="group_name_is_empty">Group name must not be empty</string>
    <string name="group_updated">Group updated</string>
    <string name="all">All</string>
    <string name="deleteConfirmationGroup">Delete group?</string>
    <string name="failedOpeningFileManager">Failed to open file manager</string>
    <string name="moveUp">Move upwards</string>
    <string name="moveDown">Move downwards</string>
    <string name="leaveWithoutSaveTitle">Exit</string>
    <string name="leaveWithoutSaveConfirmation">Leave without saving?</string>
...
